// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lambda bundle given js handler then construct and bundle task are created 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from 'constructs';

export interface MylambdaJsProps extends lambda.FunctionOptions {
}

export class MylambdaJs extends lambda.Function {
  constructor(scope: Construct, id: string, props: MylambdaJsProps = {}) {
    super(scope, id, {
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '/mylambda-js.lambda.bundle')),
      ...props,
    });
  }
}"
`;

exports[`lambda bundle given ts handler then construct and bundle task are created 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
import * as path from 'path';
import * as lambda from '@aws-cdk/aws-lambda';
import { Construct } from 'constructs';

export interface MylambdaTsProps extends lambda.FunctionOptions {
}

export class MylambdaTs extends lambda.Function {
  constructor(scope: Construct, id: string, props: MylambdaTsProps = {}) {
    super(scope, id, {
      runtime: lambda.Runtime.NODEJS_14_X,
      handler: 'index.handler',
      code: lambda.Code.fromAsset(path.join(__dirname, '/mylambda-ts.lambda.bundle')),
      ...props,
    });
  }
}"
`;
